--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.19",
+    "vite-node": "^3.1.4"
   }
 }
